# FreeInfer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
include/layer/: flatten.hpp  layer.hpp  layer_activiation.hpp  layer_convolution.hpp  layer_factory.hpp  parse_expression.hpp  relu.hpp  sigmoid.hpp  softmax.hpp
include/layer/layer_activiation/: layer_activiation.hpp  relu.hpp  sigmoid.hpp  softmax.hpp
include/layer/layer_convolution/: layer_convolution.hpp
include/layer/layer_expression/: layer_expression.hpp  parse_expression.hpp
include/layer/layer_factory/: layer.hpp  layer_factory.hpp
include/layer/layer_linear/: flatten.hpp  linear.hpp
include/layer/layer_pooling/: adaptive_avgpooling.hpp  layer_pooling.hpp  maxpooling.hpp
include/runtime/: runtime_ir.hpp  status_code.hpp
include/tensor/: load_data.hpp  tensor.hpp  tensor_util.hpp
model_file/: test_linear.pnnx.param
src/layer/: adaptive_avgpooling.cpp  flatten.cpp  layer.cpp  layer_activiation.cpp  layer_convolution.cpp  layer_expression.cpp  layer_factory.cpp  layer_pooling.cpp  linear.cpp  maxpooling.cpp  parse_expression.cpp  relu.cpp  sigmoid.cpp  softmax.cpp
src/layer/layer_activiation/: layer_activiation.cpp  relu.cpp  sigmoid.cpp  softmax.cpp
src/layer/layer_convolution/: layer_convolution.cpp
src/layer/layer_expression/: layer_expression.cpp  parse_expression.cpp
src/layer/layer_factory/: layer.cpp  layer_factory.cpp
src/layer/layer_linear/: flatten.cpp  linear.cpp
src/layer/layer_pooling/: adaptive_avgpooling.cpp  layer_pooling.cpp  maxpooling.cpp
src/pnnx/: ir.cpp  store_zip.cpp
src/runtime/: runtime_ir.cpp
src/tensor/: load_data.cpp  tensor.cpp  tensor.hpp  tensor_util.cpp
test/: CMakeLists.txt  test_create_tensor.cc  test_layers.cc  test_layers.cpp  test_load_data.cc  test_main.cpp  test_pnnx.cc  test_relu_layer.cc  test_runtime.cc  test_tensor.cc
test/test_data/: test_load_data.cpp  test_load_data.csv  test_tensor.cpp
test/test_layer/: test_adaptive_avgpooling.cpp  test_conv.cpp  test_expression.cpp  test_flatten.cpp  test_linear.cpp  test_maxpooling.cpp  test_relu.cpp  test_sigmoid.cpp  test_softmax.cpp
test/test_model/: test_resnet.cpp
test/test_runtime/: test_pnnx.cpp  test_runtime.cpp
